--- a/Curso-FullStack-OneBitCode/JavaScript/JavaScript III JS Moderno/sistema-votação/src/index.html
+++ b/Curso-FullStack-OneBitCode/JavaScript/JavaScript III JS Moderno/sistema-votação/src/index.html
@@ -37,9 +37,9 @@
     <div class="container item2">
       <div><p>Você concorda com o tema proposto?</p></div>
       <div class="vote">
-        <button type="button" class="btn btn-warning" class="yes">SIM</button
-        ><button type="button" class="btn btn-primary" class="not">NÃO</button
-        ><button type="button" class="btn btn-danger" class="nule">NULO</button>
+        <button type="button" class="btn btn-warning" id="yes">SIM</button
+        ><button type="button" class="btn btn-primary" id="not">NÃO</button
+        ><button type="button" class="btn btn-danger" id="nule">NULO</button>
       </div>
       <div>
         <input class="form-control" id="confirm" type="text" disabled />
