--- a/Curso-FullStack-OneBitCode/JavaScript/JavaScript III JS Moderno/sistema-votação/src/index.html
+++ b/Curso-FullStack-OneBitCode/JavaScript/JavaScript III JS Moderno/sistema-votação/src/index.html
@@ -42,29 +42,33 @@
         ><button type="button" class="btn btn-danger" id="nule">NULO</button>
       </div>
       <div>
-        <input class="form-control" id="confirm" type="text" disabled />
+        <input
+          class="form-control"
+          id="confirm"
+          type="text"
+          value="Vote"
+          disabled
+        />
       </div>
       <div>
         <button type="button" class="btn btn-success finish">
           Encerrar votação
         </button>
       </div>
-      <div class="item3">
-        <input
-          class="form-control"
-          type="password"
-          id="senha"
-          name="senha"
-          placeholder="Digite a senha"
-          required
-        />
-        <button type="button" class="btn btn-success" class="theEnd">
-          Encerrar
-        </button>
-      </div>
+    </div>
+    <div class="item3 container">
+      <input
+        class="form-control"
+        type="password"
+        id="senha"
+        name="senha"
+        placeholder="Digite a senha"
+        required
+      />
+      <button type="button" class="btn btn-success theEnd">Encerrar</button>
     </div>
 
-    <div class="container">
+    <div class="container item4">
       <div><span>Resultados</span></div>
       <textarea
         class="form-control"
